<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_activity_searchdevices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="36dp"
            android:text="@string/alartdescribe"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_model_dailyset_incident"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:gravity="top|left"
            android:text="@string/hint_incident" />

        <TextView
            android:id="@+id/tv_incident_num_model_dailyalart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_gravity="right"
            android:text="0/10"
            android:textColor="@color/textColor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_commeratealart_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_time_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/alartincident"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_model_dailyset_describe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="top|left"
            android:minHeight="150dp"
            android:text="@string/hint_describe" />

        <TextView
            android:id="@+id/tv_describe_model_dailyalart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:text="0/40"
            android:textColor="@color/textColor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_dailyalart_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_item_terminal_child_devicename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/textColor"
            	android:textSize="20sp"
                android:text="@string/cycle" />

            <Button
                android:id="@+id/bt_week1_dailyalart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="周一" />

            <Button
                android:id="@+id/bt_week2_dailyalart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="周二" />

            <Button
                android:id="@+id/bt_week3_dailyalart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="周三" />

            <Button
                android:id="@+id/bt_week4_dailyalart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="周四" />

            <Button
                android:id="@+id/bt_week5_dailyalart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="周五" />

            <Button
                android:id="@+id/bt_week6_dailyalart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="周六" />

            <Button
                android:id="@+id/bt_week7_dailyalart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="周日" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/cb_dailyalart_reremind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:textColor="@color/textColor"
                android:text="@string/reremind5minutes" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</LinearLayout>
